<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shreenagaraga.fingerlocationapp.Signup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img2"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:layout_marginLeft="100dp"
            app:srcCompat="@drawable/ch3" />

        <EditText
            android:id="@+id/emailID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:hint="@string/password"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:textColorHint="#ffffff" />


        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="#11000000"
            android:text="@string/signup"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:padding="0dp"
            android:text="@string/PWD"
            android:textColor="#ffffff" />
    </LinearLayout>
    </RelativeLayout>
