<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context="com.shreenagaraga.fingerlocationapp.MainActivity">


    <Button
        android:id="@+id/change_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:background="#11000000"
        android:text="@string/ChgLng"
        android:textColor="#ffffff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/buttonNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignEnd="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:background="#11000000"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/PWD"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonNextPage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="139dp"
        android:text="Centralized Attendance System"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="Welcome"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="To"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignStart="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:background="#11000000"
        android:text="Skip>>"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        app:srcCompat="@drawable/pw" />
</RelativeLayout>

